--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -525,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "b2ai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -539,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
